--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "should": "^4.3.0"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "mongoose": "^3.8.19",
     "underscore": "^1.7.0"
   }
