--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "lodash": "^2.4.1",
     "mongoose": "^3.8.19",
     "underscore": "^1.7.0"
   }
