--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "dependencies": {
     "async": "^0.9.0",
     "lodash": "^2.4.1",
-    "mongoose": "^3.8.19",
-    "underscore": "^1.7.0"
+    "mongoose": "^3.8.19"
   }
 }
