--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ node_js:
     - "0.10"
 services:
     - mongodb
+before_script:
+    - "until nc -z localhost 27017 ; do echo Waiting for MongoDB; sleep 1; done"
