--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ services:
     - mongodb
 before_script:
     - "until nc -z localhost 27017 ; do echo Waiting for MongoDB; sleep 1; done"
+after_success:
+    - "npm run-script coveralls"
